# Langtrace-drill

./: README.md  crew_demo.py  requirements.txt  test.py
composio/: github_ageny.py
lang_demo/: README.md  pyproject.toml  report.md
lang_demo/src/lang_demo/: crew.py  main.py
lang_demo/src/lang_demo/config/: tasks.yaml
