[project]
name = "lang_demo"
version = "0.1.0"
description = "lang_demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
lang_demo = "lang_demo.main:run"
run_crew = "lang_demo.main:run"
train = "lang_demo.main:train"
replay = "lang_demo.main:replay"
test = "lang_demo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
